智能对话流程升级：防尬聊提示和AI完整回应机制
- 新增聊天建议提示：6个预设话题按钮，一键开始对话
- 实现AI完整回应机制：AI说完话才处理下一条消息
- 添加用户消息队列系统：AI回应期间用户消息排队处理
- 新增AI状态指示器：显示思考中和回复中状态
- 实现防尬聊检测：自动识别对话困境并提供话题建议
- 添加消息队列指示器：显示排队消息数量
- 智能对话建议：根据对话情况主动提供话题
- 优化对话流程：避免AI被打断，确保完整表达
- 增强用户体验：减少尬聊，提供更多互动可能

--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
                     <div class="welcome-content">
                         <h2>欢迎使用智能对话助手！</h2>
                         <p>我是您的AI聊天助手，随时准备为您提供帮助。请输入您想要讨论的话题或问题。</p>
+                        <div class="conversation-prompts">
+                            <h3>💡 聊天建议：</h3>
+                            <div class="prompt-suggestions">
+                                <button class="prompt-btn" data-prompt="今天天气怎么样？">聊聊天气</button>
+                                <button class="prompt-btn" data-prompt="给我讲个有趣的故事">听个故事</button>
+                                <button class="prompt-btn" data-prompt="推荐一些好看的电影">电影推荐</button>
+                                <button class="prompt-btn" data-prompt="分享一些生活小技巧">生活技巧</button>
+                                <button class="prompt-btn" data-prompt="我们来玩个猜谜语游戏">玩游戏</button>
+                                <button class="prompt-btn" data-prompt="你有什么兴趣爱好吗？">了解你</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
