--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
                     </div>
                 </div>
                 <div class="header-actions">
+                    <button class="btn-icon" id="bilingual-btn" title="双语模式">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M5 8l6 6"></path>
+                            <path d="M4 14l6-6 2-3"></path>
+                            <path d="M2 5h12"></path>
+                            <path d="M7 2h1"></path>
+                            <path d="M22 22l-5-10-5 10"></path>
+                            <path d="M14 18h6"></path>
+                        </svg>
+                    </button>
                     <button class="btn-icon" id="search-btn" title="搜索消息">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <circle cx="11" cy="11" r="8"></circle>
@@ -192,6 +202,12 @@
                 </button>
             </div>
             <div class="modal-body">
+                <div class="setting-group">
+                    <label>
+                        <input type="checkbox" id="bilingual-mode" checked>
+                        启用双语模式（自动显示中文翻译）
+                    </label>
+                </div>
                 <div class="setting-group">
                     <label for="username">用户名</label>
                     <input type="text" id="username" placeholder="请输入您的用户名">
